--- a/art-quiz/package.json
+++ b/art-quiz/package.json
@@ -1,23 +1,40 @@
 {
-  "version": "0.1.0",
-  "description": "My new js application",
-  "private": true,
   "name": "art-quiz",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack serve --env development",
-    "build": "webpack"
+    "server": "live-server src --verbose",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "rss-scripts start",
+    "build": "rss-scripts build"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.26.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.7",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.6.2",
+    "rollup": "^0.66.4",
+    "rss-scripts": "^0.2.4",
     "sass": "^1.42.1",
     "sass-loader": "^11.1.1",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
     "webpack-remove-empty-scripts": "^0.7.1"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.1.2",
+    "services": "0.0.3"
   }
 }
