--- a/art-quiz/.prettierrc
+++ b/art-quiz/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "printWidth": 100,
+  "printWidth": 120,
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "endOfLine": "lf"
 }
