--- a/art-quiz/package.json
+++ b/art-quiz/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "rss-scripts start",
-    "build": "rss-scripts build"
+    "build": "rss-scripts build",
+    "prettier:format": "prettier --write \"**/*.+(js|(sa|sc)ss)\"",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "lint:fix-staged": "eslint --fix",
+    "svgo": "cross-env svgo --pretty --indent=2 --disable=removeViewBox,mergePaths --enable=inlineStyles --config svgo-config.json $FILE",
+    "svgo-all": "cross-env svgo -r -f src/assets/svg --pretty --indent=2 --disable=removeViewBox,mergePaths --enable=inlineStyles --config svgo-config.json"
   },
   "keywords": [],
   "author": "",
@@ -17,17 +23,27 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.0",
+    "classnames": "^2.3.1",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^8.1.1",
+    "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^5.2.7",
-    "html-webpack-plugin": "^5.3.2",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.25.3",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.0.2",
     "mini-css-extract-plugin": "^1.6.2",
+    "prettier": "^2.4.1",
     "rollup": "^0.66.4",
     "rss-scripts": "^0.2.4",
-    "sass": "^1.42.1",
-    "sass-loader": "^11.1.1",
-    "webpack": "^5.58.1",
-    "webpack-cli": "^4.9.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "svgo": "^2.8.0",
+    "webpack": "^5.64.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1",
     "webpack-remove-empty-scripts": "^0.7.1"
   },
