feat: add quiz questions rendering

--- a/art-quiz/.eslintrc
+++ b/art-quiz/.eslintrc
@@ -13,8 +13,7 @@
   "plugins": [
     "import"
   ],
-  // "ignorePatterns": ["dest", "node_modules"],
+  "ignorePatterns": ["dest", "node_modules"],
   "rules": {
-    "linebreak-style": 0
   }
 }
